apps/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Other
    gethomepage.dev/name: Excalidraw
    gethomepage.dev/href: "https://excalidraw.home.alden.ai"
    gethomepage.dev/description: "Diagram / Visual Builder"
    gethomepage.dev/icon: excalidraw.svg
    gethomepage.dev/app: excalidraw # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: >-
      app in (
        excalidraw
      )
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - excalidraw.home.alden.ai
  rules:
  - backendRefs:
    - name: excalidraw
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
