apps/excalidraw/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: excalidraw-virtualservice
spec:
  hosts:
    - excalidraw.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: excalidraw.excalidraw.svc.cluster.local
            port:
              number: 80
